Changes since 1.7.0

device files:
 - Added 16f15254.jal, 16f15255.jal

externals:
 -
 
filesystem:
 -

compiler:
 -
 
jal:
 -

networking:
 -

peripherals:
 -

projects:
 -
 
protocols:
 -

samples:
 - Added 16f15254_blink_intosc.jal, 16f15255_blink_intosc.jal
   
tools:
 - Update of Python device file generation scripts pic2jal.py for MPLABX_v6.00 




jallib-1.7.0
------------

Changes since 1.6.0

device files:
 - Added 18f06q41.jal, 18f16q41.jal
 - Added 16f15225.jal, 16f15245.jal
 - Added 18f04q40.jal, 18f05q40.jal, 18f14q40.jal, 18f15q40.jal
 - Added 18f04q41.jal, 18f05q41.jal, 18f14q41.jal, 18f15q41.jal
 - Added 18f26q83.jal, 18f46q83.jal, 18f56q83.jal
 - Added 18f26q84.jal, 18f46q84.jal, 18f56q84.jal
 - Added 18f27q84.jal, 18f47q83.jal, 18f57q83.jal
 - Added 18f27q84.jal, 18f47q84.jal, 18f57q84.jal
 - Fixed missing input pins RC4 and RC5 for 18(l)f PICs with USB

externals:
 - Added library for Bluetooth Module HC-06: bluetooth_hc06.jal
 - Added library for Bluetooth Module HC-05: bluetooth_hc05.jal
 - Added library for Real Time Clock DS3231: rtc_ds3231.jal
 - Added library for NEO-6M GPS Receiver: gps_neo_6m.jal

filesystem:
 -

compiler:
 - Added new compiler, version jalv25r5, fixing compiler issues #19, #20, #23 and #24.
 - Added JAL compiler for MacOS (jalv25r6)

jal:
 -

networking:
 -

peripherals:
 - Update of pps.jal to support newer PICs
 - Cleanup of the USB driver files due to the previous compiler fix #2 and the update of the memory pointer
   libraries to support PICs without the POSTINC function. USB driver is restored to its original state.
 - Update of the USB driver to use interrupts (selectable instead of polling). Also some small modifications
   to prevent a driver hangup as described in issue #237. Issue #237 is fixed.
 - Update of adc.jal due to PICs with different ADC. The library has been simplified which means that some
   configuration needs to be done by the main program. All ADC sample files have been updated.