@@ -1239,6 +1239,7 @@ sample/16f1455_blink_hs.jal
 sample/16f1455_blink_intosc_usb.jal
 sample/16f1455_blink_intosc.jal
 sample/16f1455_data_hef.jal
+sample/16f1455_tutorial_usb_serial.jal
 sample/16f1455_usb_hid_generic.jal
 sample/16f1455_usb_hid_keyboard.jal
 sample/16f1455_usb_hid_mouse.jal
