@@ -49,4 +49,6 @@ tutorials/tutorial_servo_rc_master.xml            japp_config.py         2010081
 tutorials/tutorial_spi_introduction.xml           japp_config.py         2010021101
 tutorials/tutorial_spi_sram_23k256.xml            japp_config.py         2010040101
 tutorials/tutorial_software.xml                   japp_config.py         2011052301
+tutorials/tutorial_usb1.xml                       japp_config.py         2010040601
+tutorials/tutorial_usb2.xml                       japp_config.py         2010040601
 
