@@ -9,7 +9,7 @@
   <body>
     <p>Jallib Tutorial Book Changes &amp; Updates</p>
     <table>
-      <title>Version 0.5 (Release date: 2022/02/20)</title>
+      <title>Version 0.5 (Release date: t.b.d)</title>
       <tgroup cols="2">
         <colspec/>
         <colspec/>
@@ -20,6 +20,10 @@
           </row>
         </thead>
         <tbody>
+          <row>
+            <entry>2022/02/26</entry>
+            <entry>Added USB library</entry>
+          </row>
           <row>
             <entry>2022/02/20</entry>
             <entry>Updated tutorials of ADC, blink-a-led</entry>
@@ -49,7 +53,7 @@
         <tbody>
           <row>
             <entry>2011/05/23</entry>
-            <entry>Added print &amp; format library.</entry>
+            <entry>Added print &amp; format library</entry>
           </row>
           <row>
             <entry>2011/05/19</entry>
