@@ -45,6 +45,8 @@
     <topicref href="tutorial_pwm1.xml"/>
     <topicref href="tutorial_pwm2.xml"/>
     <topicref href="tutorial_spi_introduction.xml"/>
+    <topicref href="tutorial_usb1.xml"/>
+    <topicref href="tutorial_usb2.xml"/>
   </chapter>
   <chapter href="tutorial_externals.xml">
     <topicref href="tutorial_pata_hard_disk.xml"/>
