@@ -29,7 +29,13 @@ protocols:
 
 samples:
  - Added 16f15254_blink_intosc.jal, 16f15255_blink_intosc.jal
-   
+ - Added 16f1455_tutorial_usb_serial.jal
+
+documentation:
+ - Update of Tutorial Book, removing broken links and updating existing links
+ - Added section on DFPlayer to Tutorial Book
+ - Added section on USB to Tutorial Book
+ 
 tools:
  - Update of Python device file generation scripts pic2jal.py for MPLABX_v6.00 
 
